--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /JavaCollectionsEj01/build/
 /JavaCollectionsEj02/nbproject/private/
 /JavaCollectionsEj01y02/nbproject/private/
+/CollectionsEj03/nbproject/private/
+/CollectionsEj03/build/
