--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /JavaCollectionsEj01y02/nbproject/private/
 /CollectionsEj03/nbproject/private/
 /CollectionsEj03/build/
+/CollectionsEj06/nbproject/private/
+/CollectionsEj05/nbproject/private/
+/CollectionsEj04/nbproject/private/
